--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,167 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
+@article{nagaraj2018early,
+  title={Early rheumatoid arthritis presentation, treatment, and outcomes in aboriginal patients in Canada: a Canadian early arthritis cohort study analysis},
+  author={Nagaraj, Sujay and Barnabe, Cheryl and Schieir, Orit and Pope, Janet and Bartlett, Susan J and Boire, Gilles and Keystone, Edward and Tin, Diane and Haraoui, Boulos and Thorne, J Carter and others},
+  journal={Arthritis Care \& Research},
+  volume={70},
   number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+  pages={1245--1250},
+  year={2018}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{nagaraj2018effectiveness,
+  title={Effectiveness of an outreach model of care for rheumatology specialty clinics to an on-reserve first nations community},
+  author={Nagaraj, Sujay and Kargard, Margaret and Hemmelgarn, Brenda and Fritzler, Marvin J and White, Tyler and Barnabe, Cheryl},
+  journal={International Journal of Indigenous Health},
+  volume={13},
+  number={1},
+  pages={157--167},
+  year={2018}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{nagaraj2020clinic,
+  title={From clinic to computer and back again: practical considerations when designing and implementing machine learning solutions for pediatrics},
+  author={Nagaraj, Sujay and Harish, Vinyas and McCoy, Liam G and Morgado, Felipe and Stedman, Ian and Lu, Stephen and Drysdale, Erik and Brudno, Michael and Singh, Devin},
+  journal={Current Treatment Options in Pediatrics},
+  volume={6},
+  pages={336--349},
+  year={2020},
+  publisher={Springer International Publishing}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@article{nagaraj2016high,
+  title={High-resolution peripheral quantitative computed tomography imaging in the assessment of periarticular bone of metacarpophalangeal and wrist joints},
+  author={Nagaraj, Sujay and Finzel, Stephanie and Stok, Kathryn S and Barnabe, Cheryl and SPECTRA collaboration and others},
+  journal={The Journal of rheumatology},
+  volume={43},
+  number={10},
+  pages={1921--1934},
+  year={2016},
+  publisher={The Journal of Rheumatology}
 }
+
+@article{mccoy2020medical,
+  title={What do medical students actually need to know about artificial intelligence?},
+  author={McCoy, Liam G and Nagaraj, Sujay and Morgado, Felipe and Harish, Vinyas and Das, Sunit and Celi, Leo Anthony},
+  journal={NPJ digital medicine},
+  volume={3},
+  number={1},
+  pages={86},
+  year={2020},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{bilimoria2019training,
+  title={Training for the future: preparing medical students for the impact of artificial intelligence},
+  author={Bilimoria, Krish and Harish, Vinyas and McCoy, Liam and Mehta, Nishila and Morgado, Felipe and Nagaraj, Sujay and Wang, Christine and Zheng, Jennifer},
+  journal={Published online},
+  year={2019}
+}
+
+@inproceedings{goodfellow2020rhythm,
+  title={Rhythm classification of 12-lead ECGs using deep neural networks and class-activation maps for improved explainability},
+  author={Goodfellow, Sebastian D and Shubin, Dmitrii and Greer, Robert W and Nagaraj, Sujay and McLean, Carson and Dixon, Will and Goodwin, Andrew J and Assadi, Azadeh and Jegatheeswaran, Anusha and Laussen, Peter C and others},
+  booktitle={2020 Computing in Cardiology},
+  pages={1--4},
+  year={2020},
+  organization={IEEE}
+}
+
+@article{nestor2021dear,
+  title={Dear Watch, Should I Get a COVID-19 Test? Designing deployable machine learning for wearables},
+  author={Nestor, Bret and Hunter, Jaryd and Kainkaryam, Raghu and Drysdale, Erik and Inglis, Jeffrey B and Shapiro, Allison and Nagaraj, Sujay and Ghassemi, Marzyeh and Foschini, Luca and Goldenberg, Anna},
+  journal={medRxiv},
+  pages={2021--05},
+  year={2021},
+  publisher={Cold Spring Harbor Laboratory Press}
+}
+
+@article{goodday2021alternative,
+  title={An alternative to the light touch digital health remote study: the stress and recovery in frontline COVID-19 Health Care Workers Study},
+  author={Goodday, Sarah M and Karlin, Emma and Alfarano, Alexandria and Brooks, Alexa and Chapman, Carol and Desille, Rachelle and Rangwala, Shazia and Karlin, Daniel R and Emami, Hoora and Woods, Nancy Fugate and others},
+  journal={JMIR Formative Research},
+  volume={5},
+  number={12},
+  pages={e32165},
+  year={2021},
+  publisher={JMIR Publications Inc., Toronto, Canada}
+}
+
+
+@article{singh2022assessment,
+  title={Assessment of machine learning--based medical directives to expedite care in pediatric emergency medicine},
+  author={Singh, Devin and Nagaraj, Sujay and Mashouri, Pouria and Drysdale, Erik and Fischer, Jason and Goldenberg, Anna and Brudno, Michael},
+  journal={JAMA Network Open},
+  volume={5},
+  number={3},
+  pages={e222599--e222599},
+  year={2022},
+  publisher={American Medical Association}
+}
+
+@article{ehrmann2022evaluating,
+  title={Evaluating and reducing cognitive load should be a priority for machine learning in healthcare},
+  author={Ehrmann, Daniel E and Gallant, Sara N and Nagaraj, Sujay and Goodfellow, Sebastian D and Eytan, Danny and Goldenberg, Anna and Mazwi, Mjaye L},
+  journal={Nature Medicine},
+  volume={28},
+  number={7},
+  pages={1331--1333},
+  year={2022},
+  publisher={Nature Publishing Group US New York}
+}
+
+@article{nestor2023machine,
+  title={Machine learning COVID-19 detection from wearables},
+  author={Nestor, Bret and Hunter, Jaryd and Kainkaryam, Raghu and Drysdale, Erik and Inglis, Jeffrey B and Shapiro, Allison and Nagaraj, Sujay and Ghassemi, Marzyeh and Foschini, Luca and Goldenberg, Anna},
+  journal={The Lancet Digital Health},
+  volume={5},
+  number={4},
+  pages={e182--e184},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{singh2023promises,
+  title={The promises and challenges of clinical AI in community paediatric medicine},
+  author={Singh, Devin and Nagaraj, Sujay and Daniel, Ryan and Flood, Colleen and Kulik, Dina and Flook, Robert and Goldenberg, Anna and Brudno, Michael and Stedman, Ian},
+  journal={Paediatrics \& Child Health},
+  volume={28},
+  number={4},
+  pages={212--217},
+  year={2023},
+  publisher={Oxford University Press US}
+}
+
+@inproceedings{hegselmann2023machine,
+  title={Machine Learning for Health (ML4H) 2023},
+  author={Hegselmann, Stefan and Parziale, Antonio and Shanmugam, Divya and Tang, Shengpu and Severson, Kristen and Asiedu, Mercy Nyamewaa and Chang, Serina and Dossou, Bonaventure FP and Huang, Qian and Kamran, Fahad and others},
+  booktitle={Machine Learning for Health (ML4H)},
+  pages={1--12},
+  year={2023},
+  organization={PMLR}
+}
+
+@inproceedings{parziale2022machine,
+  title={Machine Learning for Health (ML4H) 2022},
+  author={Parziale, Antonio and Agrawal, Monica and Tang, Shengpu and Severson, Kristen and Oala, Luis and Subbaswamy, Adarsh and Kumar, Sayantan and Schoerverth, Elora and Hegselmann, Stefan and Zhou, Helen and others},
+  booktitle={Machine Learning for Health},
+  pages={1--11},
+  year={2022},
+  organization={PMLR}
+}
+
+@article{nagaraj2023dissecting,
+  title={Dissecting the heterogeneity of “in the wild” stress from multimodal sensor data},
+  author={Nagaraj, Sujay and Goodday, Sarah and Hartvigsen, Thomas and Boch, Adrien and Garg, Kopal and Gowda, Sindhu and Foschini, Luca and Ghassemi, Marzyeh and Friend, Stephen and Goldenberg, Anna},
+  journal={npj Digital Medicine},
+  volume={6},
+  number={1},
+  pages={237},
+  year={2023},
+  publisher={Nature Publishing Group UK London}
+}
+
+
+
