--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -50,7 +50,8 @@
   number={1},
   pages={86},
   year={2020},
-  publisher={Nature Publishing Group UK London}
+  publisher={Nature Publishing Group UK London},
+  selected={True}
 }
 
 @article{bilimoria2019training,
@@ -98,7 +99,8 @@
   number={3},
   pages={e222599--e222599},
   year={2022},
-  publisher={American Medical Association}
+  publisher={American Medical Association},
+  selected={True}
 }
 
 @article{ehrmann2022evaluating,
@@ -160,7 +162,8 @@
   number={1},
   pages={237},
   year={2023},
-  publisher={Nature Publishing Group UK London}
+  publisher={Nature Publishing Group UK London},
+  selected={True}
 }
 
 
