--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -51,7 +51,7 @@
   pages={86},
   year={2020},
   publisher={Nature Publishing Group UK London},
-  selected={True}
+  selected={true}
 }
 
 @article{bilimoria2019training,
@@ -100,7 +100,7 @@
   pages={e222599--e222599},
   year={2022},
   publisher={American Medical Association},
-  selected={True}
+  selected={true}
 }
 
 @article{ehrmann2022evaluating,
@@ -163,7 +163,7 @@
   pages={237},
   year={2023},
   publisher={Nature Publishing Group UK London},
-  selected={True}
+  selected={true}
 }
 
 
