--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,33 @@
 ---
 ---
 
+
+@article{nagaraj2023dissecting,
+  title={Dissecting the heterogeneity of “in the wild” stress from multimodal sensor data},
+  author={Nagaraj, Sujay and Goodday, Sarah and Hartvigsen, Thomas and Boch, Adrien and Garg, Kopal and Gowda, Sindhu and Foschini, Luca and Ghassemi, Marzyeh and Friend, Stephen and Goldenberg, Anna},
+  journal={npj Digital Medicine},
+  volume={6},
+  number={1},
+  pages={237},
+  year={2023},
+  publisher={Nature Publishing Group UK London},
+  selected={true},
+  preview={paper1.png}
+}
+
+@article{singh2022assessment,
+  title={Assessment of machine learning--based medical directives to expedite care in pediatric emergency medicine},
+  author={Singh, Devin and Nagaraj, Sujay and Mashouri, Pouria and Drysdale, Erik and Fischer, Jason and Goldenberg, Anna and Brudno, Michael},
+  journal={JAMA Network Open},
+  volume={5},
+  number={3},
+  pages={e222599--e222599},
+  year={2022},
+  publisher={American Medical Association},
+  selected={true},
+  preview={mlmd.png}
+}
+
 @article{nagaraj2018early,
   title={Early rheumatoid arthritis presentation, treatment, and outcomes in aboriginal patients in Canada: a Canadian early arthritis cohort study analysis},
   author={Nagaraj, Sujay and Barnabe, Cheryl and Schieir, Orit and Pope, Janet and Bartlett, Susan J and Boire, Gilles and Keystone, Edward and Tin, Diane and Haraoui, Boulos and Thorne, J Carter and others},
@@ -45,7 +72,7 @@
 @article{mccoy2020medical,
   title={What do medical students actually need to know about artificial intelligence?},
   author={McCoy, Liam G and Nagaraj, Sujay and Morgado, Felipe and Harish, Vinyas and Das, Sunit and Celi, Leo Anthony},
-  journal={NPJ digital medicine},
+  journal={nPJ digital medicine},
   volume={3},
   number={1},
   pages={86},
@@ -91,17 +118,7 @@
 }
 
 
-@article{singh2022assessment,
-  title={Assessment of machine learning--based medical directives to expedite care in pediatric emergency medicine},
-  author={Singh, Devin and Nagaraj, Sujay and Mashouri, Pouria and Drysdale, Erik and Fischer, Jason and Goldenberg, Anna and Brudno, Michael},
-  journal={JAMA Network Open},
-  volume={5},
-  number={3},
-  pages={e222599--e222599},
-  year={2022},
-  publisher={American Medical Association},
-  selected={true}
-}
+
 
 @article{ehrmann2022evaluating,
   title={Evaluating and reducing cognitive load should be a priority for machine learning in healthcare},
@@ -154,17 +171,6 @@
   organization={PMLR}
 }
 
-@article{nagaraj2023dissecting,
-  title={Dissecting the heterogeneity of “in the wild” stress from multimodal sensor data},
-  author={Nagaraj, Sujay and Goodday, Sarah and Hartvigsen, Thomas and Boch, Adrien and Garg, Kopal and Gowda, Sindhu and Foschini, Luca and Ghassemi, Marzyeh and Friend, Stephen and Goldenberg, Anna},
-  journal={npj Digital Medicine},
-  volume={6},
-  number={1},
-  pages={237},
-  year={2023},
-  publisher={Nature Publishing Group UK London},
-  selected={true}
-}
 
 
 
