--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
 ---
 ---
 
+@article{nagaraj2024learning,
+      title={Learning from Time Series under Temporal Label Noise}, 
+      author={Sujay Nagaraj and Walter Gerych and Sana Tonekaboni and Anna Goldenberg and Berk Ustun and Thomas Hartvigsen},
+      year={2024},
+      arxiv={2402.04398},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      selected={true},
+      code={https://github.com/sujaynagaraj/TemporalLabelNoise},
+      preview={TLN.png}}
 
 @article{nagaraj2023dissecting,
   title={Dissecting the heterogeneity of “in the wild” stress from multimodal sensor data},
@@ -12,6 +22,8 @@
   year={2023},
   publisher={Nature Publishing Group UK London},
   selected={true},
+  code={https://github.com/sujaynagaraj/stress_recovery_public},
+  website={https://www.nature.com/articles/s41746-023-00975-9},
   preview={paper1.png}
 }
 
@@ -25,6 +37,7 @@
   year={2022},
   publisher={American Medical Association},
   selected={true},
+  website={https://jamanetwork.com/journals/jamanetworkopen/fullarticle/2790164},
   preview={mlmd.png}
 }
 
@@ -78,6 +91,7 @@
   pages={86},
   year={2020},
   publisher={Nature Publishing Group UK London},
+  website={https://www.nature.com/articles/s41746-020-0294-7},
   selected={true}
 }
 
