--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -92,6 +92,7 @@
   year={2020},
   publisher={Nature Publishing Group UK London},
   website={https://www.nature.com/articles/s41746-020-0294-7},
+  preview={medstudentAI.png},
   selected={true}
 }
 
