updated MLMD preview

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -38,7 +38,7 @@
   publisher={American Medical Association},
   selected={true},
   website={https://jamanetwork.com/journals/jamanetworkopen/fullarticle/2790164},
-  preview={mlmd.png}
+  preview={mlmd2.png}
 }
 
 @article{nagaraj2018early,
