added MLHC paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,18 @@
 ---
 ---
 
+@inproceedings{nagaraj2024needles,
+  title={Needles in Needle Stacks: Meaningful Clinical Information Buried in Noisy Waveform Data},
+  author={Sujay Nagaraj and Andrew J. Goodwin and Dmytro Lopushanskyy and Danny Eytan and Robert W. Greer and Sebastian D. Goodfellow and Azadeh Assadi and Anand Jayarajan and Anna Goldenberg and Mjaye L. Mazwi},
+  booktitle={Machine Learning for Healthcare (MLHC) 2024},
+  volume={252},
+  pages={1--20},
+  year={2024},
+  organization={PMLR},
+  selected={true},
+  preview = {sharkfin.png}
+}
+
 @article{nagaraj2024learning,
       title={Learning from Time Series under Temporal Label Noise}, 
       author={Sujay Nagaraj and Walter Gerych and Sana Tonekaboni and Anna Goldenberg and Berk Ustun and Thomas Hartvigsen},
